# NED_Batch5-ML_FinalProject-Ruhama-1304

./: README.md
Todo_taskapp/todoapp/todoapp/: docker-compose.yaml  pyproject.toml
Todo_taskapp/todoapp/todoapp/todoapp/: crud.py  database.py
